[gd_scene load_steps=10 format=3 uid="uid://b68xafg8akmm1"]

[ext_resource type="Script" uid="uid://dr8764jglhiut" path="res://script/Interactible.gd" id="1_4hf3o"]
[ext_resource type="Script" uid="uid://c3xs0vymk2xmv" path="res://instances/items/item.gd" id="1_fia1t"]
[ext_resource type="PackedScene" uid="uid://b36a52vnas7u7" path="res://assets/meshes/props/pineapple.gltf" id="2_4hf3o"]
[ext_resource type="PackedScene" uid="uid://16byxldnl5pg" path="res://assets/meshes/props/banana.gltf" id="2_fia1t"]
[ext_resource type="PackedScene" uid="uid://cc35yar7kqya3" path="res://assets/meshes/props/frozenFish.gltf" id="5_pugyh"]
[ext_resource type="PackedScene" uid="uid://c1o205v2gtgvl" path="res://assets/meshes/props/frozenPeas.gltf" id="6_pk5fb"]
[ext_resource type="PackedScene" uid="uid://bcagvcas41l0t" path="res://assets/meshes/props/frozenPizza.gltf" id="7_q6xy8"]
[ext_resource type="PackedScene" uid="uid://betirsj8csd3x" path="res://assets/meshes/props/watermelon.gltf" id="8_rbi06"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fia1t"]
radius = 0.109261
height = 0.300075

[node name="item_ananas" type="RigidBody3D"]
collision_layer = 4
collision_mask = 63
continuous_cd = true
linear_damp = 1.333
angular_damp = 1.333
script = ExtResource("1_fia1t")

[node name="coll" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0, 0, 1, 0, 0.00443958, 0)
shape = SubResource("CapsuleShape3D_fia1t")

[node name="pineapple" parent="." instance=ExtResource("2_4hf3o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.12537, 0)

[node name="SpringBoneSimulator3D" type="SpringBoneSimulator3D" parent="pineapple/PineappleArmature/Skeleton3D" index="0"]
setting_count = 1
settings/0/root_bone_name = "Bone"
settings/0/root_bone = 0
settings/0/end_bone_name = "Bone.002"
settings/0/end_bone = 2
settings/0/extend_end_bone = false
settings/0/center_from = 0
settings/0/individual_config = false
settings/0/rotation_axis = 3
settings/0/radius/value = 0.02
settings/0/radius/damping_curve = null
settings/0/stiffness/value = 1.0
settings/0/stiffness/damping_curve = null
settings/0/drag/value = 0.4
settings/0/drag/damping_curve = null
settings/0/gravity/value = 0.0
settings/0/gravity/damping_curve = null
settings/0/gravity/direction = Vector3(0, -1, 0)
settings/0/enable_all_child_collisions = true
settings/0/exclude_collision_count = 0

[node name="Interactible" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_4hf3o")
metadata/_custom_type_script = "uid://dr8764jglhiut"

[node name="banana" parent="." instance=ExtResource("2_fia1t")]
visible = false

[node name="frozenFish" parent="." instance=ExtResource("5_pugyh")]
visible = false

[node name="frozenPeas" parent="." instance=ExtResource("6_pk5fb")]
visible = false

[node name="frozenPizza" parent="." instance=ExtResource("7_q6xy8")]
visible = false

[node name="watermelon" parent="." instance=ExtResource("8_rbi06")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[editable path="pineapple"]
